--- a/GridAssignment/Grid.css
+++ b/GridAssignment/Grid.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 html{
-    font-size: 63%;
+    font-size: 10px;
 }
 body{
     background-color: #ECF2F8;
@@ -77,7 +77,7 @@ body{
 .sec1,.sec2,.sec5,.sec4,.sec3{
     padding: 20px;
     box-sizing: border-box;
-    text-align:justify;
+    /* text-align:justify; */
     object-fit: cover;
 }
 .flex{
@@ -108,4 +108,3 @@ body{
     padding: 0px 5px 5px 5px;
 
 }
-
