--- a/Weeklytest4/style.css
+++ b/Weeklytest4/style.css
@@ -66,7 +66,7 @@ header {
     height: 100vh;
     width: 100%;
     position: relative;
-    background: url("https://www.dlight.com/wp-content/uploads/2019/09/shutterstock_587557163.jpg");
+    background: url("https://koa.com/blog/images/family-camping-at-sunset.jpg?preset=heroimagecropped");
     background-position: center 65%;
     background-size: cover;
     background-attachment: fixed;
