--- a/WeeklyTest6-CSS/style.css
+++ b/WeeklyTest6-CSS/style.css
@@ -15,16 +15,20 @@ body {
     color: #000;
     line-height: 1.5;
 }
-.header{
-    position: sticky;
+.header {
+    position: fixed;
     top: 0;
-    z-index: 1000;
+    left: 0; 
+    width: 100%; 
+    z-index: 2;
     font-family: Roboto, sans-serif;
     font-weight: 500;
     font-style: normal;
     letter-spacing: 1px;
     font-size: 14px;
     text-transform: uppercase;
+    background-color: white; 
+   
 }
 nav{
     height: 8vh;
@@ -73,6 +77,81 @@ a{
     color: rgb(3, 3, 3);
 }
 
+h3, .h3 {
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 25px;
+    text-transform: none;
+    line-height: 1.5;
+    color: #000;
+    display: block;
+    letter-spacing: 0px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.left-nav:hover .rotate-on-hover{
+    transform: rotate(180deg);
+    color: red; 
+
+}
+.left-nav img:hover{
+    opacity: 0.7;
+}
+.nav-menu a:hover {
+    color: red;
+}
+
+.right-nav i:hover {
+    color: red;
+}
+
+.nav-menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-menu li {
+    display: inline-block;
+    position: relative;
+}
+
+.nav-menu li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #333;
+}
+
+.submenu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 999; 
+    width: 200px;
+}
+
+.submenu li {
+    display: block;
+}
+
+.dropdown:hover .submenu {
+    display: block;
+}
+
+.rotate-on-hover {
+    transition: transform 0.3s ease, color 0.3s ease; 
+    color: black; 
+}
+
+.rotate-on-hover:hover {
+    transform: rotate(180deg);
+    color: red; 
+}
+
 
 .College-main-container {
     display: flex;
@@ -117,8 +196,9 @@ a{
     opacity: 0.7;
 }
 .sub-img{
-    height: 45%;
-    width: 60%;
+    height: 35%;
+    width: 50%;
+    opacity: 1.5;
 }
 .img-all{
     display: flex;
@@ -126,12 +206,283 @@ a{
     align-items: center;
     justify-content: center;
 }
-.short-img-container{
-    height: 5vh;
+main{
+    height: 100vh;
+}
+.main-header{
+    height: 7%;
     background-color: #000;
+    
+}
+.short-img-container {
     display: flex;
     justify-content: center;
-    gap: 5%;
+    align-items: center;
+    gap: 10%;
+}
+
+.heading-content{
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.red-text {
+    color: red;
+}
+
+.image-and-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.image-and-text-sec1,.image-and-text-sec2,.image-and-text-sec3,.image-and-text-sec4{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    /* gap: 5%; */
+    /* overflow: hidden; */
+
+}
+img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+.image-and-text-sec1-img,.image-and-text-sec2-img,.image-and-text-sec3-img{
+    width: 100%;
+    height: 50%;
+    margin: 5%;
+    overflow: hidden;
+}
+.image-and-text-sec1-text,.image-and-text-sec2-text,.image-and-text-sec3-text{
+    text-align: left;
+    margin: 10% 5% 5% 1%;
+}
+.image-and-text-sec1-button{
+    /* width: 100px; */
+    margin-top: 2.5%;
+    line-height: 1.5vh;
+    background-color: #ef4848;
+    color: #FEFEFE;
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.image-and-text-sec1-img img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+.bg-image-text{
+    background-image: url(https://boostedusa.com/cdn/shop/files/boosted-rev-display_2000x.jpg?v=1646160921);
+    background-size: cover;
+    height: 90vh;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+   
+
+}
+
+.bg-image-text-content{
+ margin-top: 10%;
+}
+
+.video-wrapper {
+    position: relative;
+    display: inline-block; 
+    margin:10px;
+}
+
+.video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    pointer-events: none;
+    z-index: 1; 
+}
+.bg-image-text2{
+    background-image: url(https://boostedusa.com/cdn/shop/files/evolve-skateboards-1_2000x.jpg?v=1646161047);
+    background-size: cover;
+    height: 90vh;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+
+}
+
+.bg-image-text2-content{
+    margin-top: 20%;
+    color: #FEFEFE;
+
+}
+.Accessories-section-title{
+    margin-top: 2%;
+    text-align: center;
+    font-weight: 700;
+}
+.Accessories-section-items-type1{
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 3%;
+
+}
+
+.product-thumbnail__title{
+    color: #ef4848;
+}
+.Accessories-items{
+    text-align: center;
+}
+/* .Accessories-items-img{
+    width: ;
+    height: 5rem;
+} */
+.Newsletter-sec-main{
+    height: 70vh;
+    width: 100vw;
+    background-color:#E5E5E5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.news-button{
+    /* width: 100px; */
+    margin-top: 2.5%;
+    width: 400px;
+    line-height: 1.5vh;
+    background-color: #ef4848;
+    color: #FEFEFE;
+    border: none;
+    padding: 20px 25px;
+}
+.contact-img-bg{
+    text-align: center;
+    color: #fff;
+    display: inline-block;
+    background: rgba(0, 0, 0, .3);
+    padding: 4px 10px;
+    border-radius: 10px;
+    line-height: 1;
+    width: 108px;
+    margin-top: 5px;
+}
+.contact-img{
+    height: 100%;
+    width: 100%;
+    
 }
 
 
+.subscribe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* gap: 2rem; */
+    text-align: center;
+    background-color: #e5e5e5;
+    margin-bottom: 0;
+}
+.subscribe-details{
+    display: flex;
+    width: 33rem;
+    padding: 3rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+}
+.subscribe-details>p>u:hover{
+    cursor: pointer;
+}
+button:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.Go{
+    display: flex;
+    width: 100%;
+    height: 18rem;
+    background-color: black;
+    margin-top: 0;
+    transform: translateY(-1rem);
+}
+
+.Go>.items{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 3rem;
+}
+.Go>.items>.item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    color: white;
+    width: 20rem;
+    text-align: center;
+
+}
+.Go>.items>.item>img{
+    width: 6rem;
+    height: 6rem;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    margin-top: -1rem;
+    gap: 2rem;
+}
+footer>.content{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+footer>.content>div{
+    width: 20rem;
+    background-color: white; padding: 2rem;
+}
+.Address{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+.copyright{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+.copyright>p>span{
+    color: #ff4a32;
+}
+
+
+
+.recaptcha{
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+  }
+  .recaptcha>img{
+    height: 4rem;
+    width: 4.5rem;
+  }
+
+  .iconn{
+    display: flex;
+    align-items: center;
+  }
