--- a/MajorProject/style.css
+++ b/MajorProject/style.css
@@ -1,19 +1,22 @@
 @import url(./color.css);
-@import url(./color.css);
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body, p {
+    color: #787976;
+    font: 400 1rem / 1.5625rem "Open Sans", sans-serif;
+}
 html{
     font-size: 16px;
 }
-.header {
-    height: 100vh;
-    
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(https://www.free-css.com/assets/files/free-css-templates/preview/page259/aria/assets/images/header-background.jpg) center center no-repeat;
-    background-size: cover;
+.header{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 nav{
     height: 8vh;
@@ -23,19 +26,176 @@ nav{
     justify-content: space-around;
     align-items: center;
 }
+.homepage {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    gap: 2rem;;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(https://www.free-css.com/assets/files/free-css-templates/preview/page259/aria/assets/images/header-background.jpg) center center no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.homepage >h1{
+    font-size: 60px;
+    font-weight: 700px;
+    color: white;
+}
+
+.homepage >p{
+ font-family: Montserrat;
+ font-weight: 700px;
+ color: white;
+ font-size: 1.10rem;
+}
+.homepage>button{
+    background-color: rgb(9, 233, 158);
+    color: white;
+    padding: 15px 25px;
+    font-size: 21px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
 .right-nav{
     display: flex;
     gap: 80px;
 }
+
 .right-nav>ul{
     color: white;
     display: flex;
     list-style: none;
-    gap: 10px;
+    gap: 3rem;
     align-items: center;
     
+}
+.right-nav ul li:hover {
+    color: #13BF98;
+}
+.right-nav ul li a:hover {
+    color: #13BF98;
 }
 a{
     text-decoration: none; 
     color: white;
+}
+.Intro{
+    height: 98vh;
+}
+/* .section-title{
+    text-align: left;
+} */
+.Intro-container{
+    display: flex;
+    /* margin-top: 10%; */
+    padding: 5rem 5rem;
+    justify-content: center;
+    
+}
+
+.Intro-container-left{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+}
+.Intro-container-right{
+    flex: 1;
+    
+
+}
+.intro-img{
+    width: 100%;
+    overflow: hidden;
+    border-radius: 0.25rem;
+}
+.Intro-container .Intro-container-right .intro-img img{
+    height: 70%;
+    width: 80%;
+    background-position: center;
+
+}
+.Intro-container .Intro-container-right img:hover{
+    transform: scale(1.2);
+    transition: all .2s ease-in-out;
+
+}
+.intro-cards{
+    display: flex;
+    justify-content: space-around;
+}
+.intro-card-icon{
+    display: flex;
+    justify-content: center;
+}
+.intro-card-content{
+    display: flex;
+    justify-content: center;
+}
+.intro-card-content-p{
+    display: flex;
+    justify-content: center;
+}
+.fa, .fas {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+}
+ .fa-stack-1x {
+    color: #fff;
+    font-size: 20rem;
+}
+.Services{
+    height: 100vh;
+}
+.Services-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+.Services-cards{
+    display: flex;
+    margin-top: 5rem;
+    justify-content: center;
+    gap: 4rem;
+   
+}
+.Services-card{
+  
+    height: 30rem;
+    width: 20rem;
+    border-radius: 8px;
+    border: 1px solid rgb(218, 214, 214);
+    box-shadow: #787976;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Services-card>img{
+    height: 30%;
+    width: 100%;
+    border-radius: 8px;
+}
+.Services-card ul li{
+    list-style: square;
+    
+}
+.Services-card>button{
+    background-color: rgb(9, 233, 158);
+    color: white;
+    padding: 10px 15px;
+    font-size: 21px;
+    border-radius: 8px;
+    border: none;
+    position: relative;
+    transform: translateY(7rem);
+
+}
+.Details-section2-img> img{
+    height: 20rem;
+    width: 40rem;
 }
